# home-automation-hub

./: pyproject.toml
src/hubmaster/: __init__.py
src/hubmaster/consumer/: __init__.py  miraie.py  processor.py
